# agentica

./: .env.example  .gitignore  README.md  chat.py  main.py  pyproject.toml  requirements.txt  run.sh  server.py  tests.sh
agentica/: .env.example  main.py  pytest.ini  requirements.txt  server.py  tools.yaml
agentica/scripts/: seed.py
agentica/tests/: conftest.py  test_agents.py  test_api.py  test_api_expansion.py  test_consensus_unit.py  test_dashboard_api.py  test_data_agent.py  test_db_config.py  test_has_research.py  test_history_unit.py  test_intent_classifier.py  test_junk.py  test_loop_fix.py  test_mcp_management.py  test_model_configuration.py  test_pydantic_name.py  test_registry_unit.py  test_router_unit.py  test_secret_management.py  test_server_filtering.py  test_standalone_research.py  test_supervisor_loop.py  test_supervisor_parsing.py  (+1 more)
dashboard/: package-lock.json  package.json
docs/: architecture.md  features.md  roadmap.md
scripts/: debug_mcp.py  inspect_mcp.py  list_models.py  optimize_prompts.py  seed_phase_19.py  setup_db.py  test_consensus.py  test_data_agent.py  test_full_pipeline.py  test_hierarchical_planning.py  test_hitl_dynamic.py  test_memory_rag.py  test_model_ensemble.py  test_parallel.py  test_planning.py  test_prompt_optimizer.py  test_research.py  test_self_healing.py  verify_api.py  verify_api_extension.py  verify_dynamic_tool.py  verify_hitl.py  verify_parallel.py  verify_rag.py  verify_reflection.py  verify_supervisor.py  verify_tools.py
tests/: conftest.py  test_agents.py  test_data_agent.py  test_model_fallback.py
(+49 files in other folders)
