[project]
name = "agentica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "chromadb==1.5.1",
    "duckduckgo-search==8.1.1",
    "fastapi==0.131.0",
    "langchain==1.2.10",
    "langchain-anthropic==1.3.3",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-google-genai==4.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.10",
    "langgraph==1.0.9",
    "langgraph-checkpoint-sqlite==3.0.3",
    "lxml==6.0.2",
    "mcp==1.26.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.1",
    "rich==14.3.3",
    "structlog==25.5.0",
    "toolbox-core==0.5.9",
    "uvicorn==0.41.0",
    "xai-sdk==1.7.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
